// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> with \`center\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH coerNR"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`digits\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH jigKYF"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`disabled\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH eiEJux"
  disabled={true}
  name="text"
/>
`;

exports[`<TextInput /> with \`error\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH iGQVAk"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`huge\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH izBtTt"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`name\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH eiEJux"
  disabled={false}
  name="foobar"
/>
`;

exports[`<TextInput /> with \`tag\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH eiEJux"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`tiny\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH iHgAQK"
  disabled={false}
  name="text"
/>
`;

exports[`<TextInput /> with \`valid\` prop matches with snapshot 1`] = `
<input
  className="sc-bwzfXH iSPCiL"
  disabled={false}
  name="text"
/>
`;
